ci: Pyright LSP check on episode 13 code

--- a/episode-13/pyproject.toml
+++ b/episode-13/pyproject.toml
@@ -22,6 +22,7 @@ nbtlib = "^2.0.4"
 base36 = "^0.1.1"
 pyglm = "^2.7.1"
 cython = "^3.0.10"
+pyright = "^1.1.373"
 
 [tool.poetry.group.dev.dependencies]
 tan = "^23.7.0"
