--- a/.github/workflows/ep13-lsp.yml
+++ b/.github/workflows/ep13-lsp.yml
@@ -11,6 +11,8 @@ jobs:
         with:
           python-version: "3.11"
       - uses: abatilo/actions-poetry@v2
+      - name: Change into episode 13 directory
+        run: cd episode-13
       - name: Install dependencies
         run: poetry install --no-root --with dev
       - name: Cache venv created by poetry (configured to be in '.venv')
