ci/ep13: Rebuild project too

--- a/.github/workflows/ep13-lsp.yml
+++ b/.github/workflows/ep13-lsp.yml
@@ -14,8 +14,10 @@ jobs:
         with:
           python-version: "3.11"
       - uses: abatilo/actions-poetry@v2
-      - name: Install dependencies
-        run: poetry install --no-root --with dev
+      - name: Install dependencies and build Cython extension
+        run: poetry install
+      - name: Rebuild the project
+        run: poetry build
       - name: Cache venv created by poetry (configured to be in '.venv')
         uses: actions/cache@v3
         with:
