--- a/.github/workflows/ep13-lsp.yml
+++ b/.github/workflows/ep13-lsp.yml
@@ -25,4 +25,5 @@ jobs:
           key: venv-${{ runner.os }}-${{ hashFiles('poetry.lock') }}
       - name: Run pyright
         run: |
+          find .
           poetry run pyright
