--- a/.github/workflows/formatting.yml
+++ b/.github/workflows/formatting.yml
@@ -10,3 +10,9 @@ jobs:
       - uses: chartboost/ruff-action@v1
         with:
           args: 'format --check'
+
+  check_linting:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: chartboost/ruff-action@v1
